--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,6 +12,7 @@
         <a class="single" href="/blogs/<%= blog._id %>">
           <h3 class="title"><%= blog.title %></h3>
           <p class="name"><%= blog.name %></p>
+          <p class="body"><%= blog.body %></p><br>
         </a>
       <% }) %>
     <% } else { %>
