added view individual posts and delete posts

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -5,10 +5,10 @@
   <%- include("./partials/nav.ejs") %>
 
   <div class="about content">
-    <h2>About Us</h2>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia quibusdam quaerat illo a modi tenetur ut blanditiis, illum quo consectetur recusandae excepturi natus impedit rem, tempora cum fuga quae in.</p>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia quibusdam quaerat illo a modi tenetur ut blanditiis, illum quo consectetur recusandae excepturi natus impedit rem, tempora cum fuga quae in.</p>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia quibusdam quaerat illo a modi tenetur ut blanditiis, illum quo consectetur recusandae excepturi natus impedit rem, tempora cum fuga quae in.</p>
+    <h2>Project Overview</h2>
+    <p>For this project we wanted to produce an anonymous message board where the posts persisted even if the server restarted.</p><br>
+    <p>The technology we chose to solve this was MongoDB Atlas, a cloud-based, non-relational database. The server app was built using node.js and a range of dependencies such as Express (for routing), Mongoose (to connect to MongoDB) and EJS (for server side rendering).</p><br>
+    <p>It was deployed on <a href="https://telegraph-futureproof.herokuapp.com/">Heroku</a>.</p>
   </div>
 
   <%- include("./partials/footer.ejs") %>
