--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -4,8 +4,8 @@
     <p>24 Hour Challenge</p>
   </div>
   <ul>
-    <li><a href="/">Blogs</a></li>
-    <li><a href="/about">About</a></li>
-    <li><a href="/blogs/create">New Telegraph</a></li>
+    <li><a href="/">Telegraphs</a></li>
+    <li><a href="/about">Project</a></li>
+    <li><a href="/blogs/create">New</a></li>
   </ul>
 </nav>
