--- a/views/about.ejs
+++ b/views/about.ejs
@@ -4,11 +4,11 @@
 <body>
   <%- include("./partials/nav.ejs") %>
 
-  <div class="about content">
+  <div class="about content text">
     <h2>Project Overview</h2>
-    <p>For this project we wanted to produce an anonymous message board where the posts persisted even if the server restarted.</p><br>
-    <p>The technology we chose to solve this was MongoDB Atlas, a cloud-based, non-relational database. The server app was built using node.js and a range of dependencies such as Express (for routing), Mongoose (to connect to MongoDB) and EJS (for server side rendering).</p><br>
-    <p>It was deployed on <a href="https://telegraph-futureproof.herokuapp.com/">Heroku</a>.</p>
+    <h3>For this project we wanted to produce an anonymous message board where the posts persisted even if the server restarted.</h3><br>
+    <h3>The technology we chose to solve this was MongoDB Atlas, a cloud-based, non-relational database. The server app was built using node.js and a range of dependencies such as Express (for routing), Mongoose (to connect to MongoDB) and EJS (for server side rendering).</h3><br>
+    <h3>It was deployed on <a href="https://telegraph-futureproof.herokuapp.com/">Heroku</a>.</h3>
   </div>
 
   <%- include("./partials/footer.ejs") %>
