--- a/views/details.ejs
+++ b/views/details.ejs
@@ -6,8 +6,8 @@
 
     <div class="details content">
         <h2><%= blog.title %></h2>
-        <div class="content">
-            <p><%= blog.body %></p>
+        <div class="content text">
+            <h3><%= blog.body %></h3>
         </div>
         <a class="delete" data-doc="<%= blog._id %>">delete</a>
     </div>
