--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,8 +11,8 @@
       <% blogs.forEach(blog => { %>
         <a class="single" href="/blogs/<%= blog._id %>">
           <h3 class="title"><%= blog.title %></h3>
-          <p class="name"><%= blog.name %></p>
-          <p class="body"><%= blog.body %></p><br>
+          <p class="name">by: <%= blog.name %></p>
+
         </a>
       <% }) %>
     <% } else { %>
